--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -22,11 +22,13 @@ body
       background darkaccent
 
 .alert-container
+  text-align center
   position absolute
   top 60px
   left 50%
   z-index 10 !important
   visibility 1
+  opacity 0.95
   transition all 200ms
   .hidden
     visibility 0
