--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,11 +18,13 @@ body .required-star {
   background: #7080cc;
 }
 .alert-container {
+  text-align: center;
   position: absolute;
   top: 60px;
   left: 50%;
   z-index: 10 !important;
   visibility: 1;
+  opacity: 0.95;
   transition: all 200ms;
 }
 .alert-container .hidden {
