added ability to share contact information with friends

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -11,6 +11,11 @@ body
     color #DB2828
     margin -.2em 0 0 .2em
 
+  .split-half
+    display flex !important
+    justify-content space-between
+    align-items baseline
+
 #navbar
   background transparent
   color darkshades
