manage user-specific sharing settings

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -15,6 +15,9 @@ body
     display flex !important
     justify-content space-between
     align-items baseline
+  
+  .tabbed
+    padding-left 10px
 
 #navbar
   background transparent
