--- a/views/pages/index.njk
+++ b/views/pages/index.njk
@@ -5,7 +5,10 @@
     <title>{{appname}}</title>
   </head>
   <body>
-    <div id="app"/>
+    <div>
+      <div id="app"/>
+    </div>
+    <input id="_token" type="hidden" value="{{token}}" />
     <script src="/bundle.js" type="text/javascript"></script>
   </body>
 </html>
