--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -57,3 +57,8 @@ body
 .profile-page
   .subtitle
     margin-top 0
+
+.user-search
+  .aligned.column
+    margin-top 14px !important
+    padding 0 24px !important
