consolidated address book with friends

--- a/client/css/style.styl
+++ b/client/css/style.styl
@@ -79,8 +79,11 @@ body
       .left
         width 40%
         .extras
+          margin-top 5px
           a
             cursor pointer
+          p:last-of-type
+            margin-bottom 0
       .right
         width 50%
         table
